--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server/server.js",
   "scripts": {
     "start": "node server/server.js",
+    "bot": "node server/startBot.js",
     "dev": "nodemon server/server.js",
+    "dev:bot": "nodemon server/startBot.js",
     "build": "echo 'Building frontend assets...' && npm run minify",
     "minify": "npm run minify:css && npm run minify:js",
     "minify:css": "cleancss -o public/assets/css/style.min.css public/assets/css/style.css",
@@ -41,37 +43,38 @@
     "npm": ">=8.0.0"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.5.0",
-    "jsonwebtoken": "^9.0.2",
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "express-rate-limit": "^6.10.0",
-    "compression": "^1.7.4",
-    "dotenv": "^16.3.1",
     "axios": "^1.5.0",
+    "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.10.0",
+    "helmet": "^7.0.0",
+    "joi": "^17.9.2",
+    "jsonwebtoken": "^9.0.2",
+    "moment": "^2.29.4",
+    "mongoose": "^7.5.0",
+    "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.2",
+    "node-telegram-bot-api": "^0.64.0",
+    "sharp": "^0.32.5",
     "socket.io": "^4.7.2",
     "web3": "^4.1.1",
-    "crypto": "^1.0.1",
-    "moment": "^2.29.4",
-    "joi": "^17.9.2",
-    "multer": "^1.4.5-lts.1",
-    "sharp": "^0.32.5",
-    "node-cron": "^3.0.2",
     "winston": "^3.10.0",
     "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "jest": "^29.6.4",
-    "supertest": "^6.3.3",
+    "clean-css-cli": "^5.6.2",
     "eslint": "^8.48.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.28.1",
-    "clean-css-cli": "^5.6.2",
-    "uglify-js": "^3.17.4",
-    "pm2": "^5.3.0"
+    "jest": "^29.6.4",
+    "nodemon": "^3.0.1",
+    "pm2": "^5.3.0",
+    "supertest": "^6.3.3",
+    "uglify-js": "^3.17.4"
   },
   "repository": {
     "type": "git",
@@ -81,4 +84,4 @@
     "url": "https://github.com/your-username/starflow/issues"
   },
   "homepage": "https://github.com/your-username/starflow#readme"
-} 
+}
