--- a/.env.example
+++ b/.env.example
@@ -27,7 +27,7 @@ JWT_EXPIRES_IN=7d
 # TELEGRAM BOT
 # ================================
 # Токен бота от @BotFather
-TELEGRAM_BOT_TOKEN=your-telegram-bot-token-here
+TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
 # Имя пользователя бота (без @)
 TELEGRAM_BOT_USERNAME=your_bot_username
 # URL для webhook (только для продакшена)
@@ -37,7 +37,7 @@ WEBHOOK_URL=https://yourdomain.com
 # WEB3 И БЛОКЧЕЙН
 # ================================
 # Infura или другой Web3 провайдер
-WEB3_PROVIDER_URL=https://mainnet.infura.io/v3/your-project-id
+WEB3_PROVIDER_URL=https://rpc-mumbai.maticvigil.com/
 # Или для тестовой сети:
 # WEB3_PROVIDER_URL=https://goerli.infura.io/v3/your-project-id
 
@@ -140,4 +140,27 @@ GAS_LIMIT=21000
 # Только для продакшена
 # SSL_CERT_PATH=/path/to/ssl/cert.pem
 # SSL_KEY_PATH=/path/to/ssl/key.pem
-# SENTRY_DSN=your-sentry-dsn-for-error-tracking 
+# SENTRY_DSN=your-sentry-dsn-for-error-tracking
+
+# Telegram Bot Configuration
+TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
+
+# Web3 Configuration
+WEB3_PROVIDER_URL=https://rpc-mumbai.maticvigil.com/
+PRIVATE_KEY=your_private_key_here
+TOKEN_CONTRACT_ADDRESS=0x1234567890123456789012345678901234567890
+NFT_CONTRACT_ADDRESS=0x0987654321098765432109876543210987654321
+
+# Network Configuration
+NETWORK_NAME=Polygon Mumbai Testnet
+CHAIN_ID=80001
+
+# Server Configuration
+PORT=3000
+NODE_ENV=development
+
+# Database Configuration (if needed)
+DATABASE_URL=mongodb://localhost:27017/starflow
+
+# CORS Configuration
+CORS_ORIGIN=* 
