--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "npm": ">=8.0.0"
   },
   "dependencies": {
+    "@truffle/hdwallet-provider": "^2.1.15",
     "axios": "^1.5.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
@@ -61,7 +62,7 @@
     "node-telegram-bot-api": "^0.64.0",
     "sharp": "^0.32.5",
     "socket.io": "^4.7.2",
-    "web3": "^4.1.1",
+    "web3": "^4.16.0",
     "winston": "^3.10.0",
     "winston-daily-rotate-file": "^4.7.1"
   },
